<resources>
    <string name="app_name">moodnote</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="register_login">Регистрация/Вход</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="currentdate">CurrentDate</string>
    <string name="wed">Wed</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="todo">TODO</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="piechart">piechart</string>
    <string name="calendar">calendar</string>
    <string name="add_note">Add note</string>
    <string name="textview">TextView</string>
    <string name="glad">Веселое</string>
    <string name="sad">Грустное</string>
    <string name="angry">Злое</string>
    <string name="deleterus">Удалить</string>
    <string name="add_note_rus">Добавить заметку</string>
    <string name="saverus">Сохранить</string>
    <string name="mood_note">MOOD NOTE</string>
    <string name="mon_rus">Пн</string>
    <string name="wed_rus">Ср</string>
    <string name="tue_rus">Вт</string>
    <string name="thu_rus">Чт</string>
    <string name="fri_rus">Пт</string>
    <string name="sat_rus">Сб</string>
    <string name="sun_rus">Вс</string>
    <string name="deleteall_rus">Удалить все</string>
    <string name="zametka">Заметка</string>
    <string name="wonderful_rus">Прекрасное</string>
    <string name="awful_rus">Ужасное</string>
    <string name="name">Имя</string>
    <string name="description">Описание</string>
    <string name="choose_image">Выбрать изображение</string>
    <string name="change_profile">Изменить профиль</string>
    <string name="delete_color">Удалить цвет</string>
    <string name="add_color">Добавить новый цвет</string>
    <string name="note">Заметка</string>
    <string name="icon_of_profile">icon of profile</string>
    <string name="name_">Имя:</string>
    <string name="description_">Описание:</string>
    <string name="email_">Эл. почта:</string>
    <string name="write">Редактировать</string>
    <string name="exit">Выйти</string>
    <string name="emailrus">Электронная почта</string>
    <string name="passwordrus">Пароль</string>
    <string name="registrationrus">Регистрация</string>
    <string name="loginrus">Вход</string>
    <string name="calendarrus">Календарь</string>
    <string name="profilerus">Профиль</string>
    <string-array name="motivs">
        <item name="1">Ты все сможешь!</item>
        <item name="2">Удачного дня!</item>
        <item name="3">Ты можешь многое!</item>
        <item name="4">Какой у тебя сегодня был день?</item>
        <item name="5">Ты в порядке?</item>
        <item name="6">Ты солнышко!</item>
    </string-array>
</resources>