<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choosecolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--    <LinearLayout-->
    <!--        android:id="@+id/linear"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"></LinearLayout>-->

    <!--    <Button-->
    <!--        android:layout_width="70dp"-->
    <!--        android:layout_height="70dp"-->
    <!--        android:backgroundTint="@color/pink"-->
    <!--        android:insetLeft="6dp"-->
    <!--        android:insetTop="6dp"-->
    <!--        android:insetRight="6dp"-->
    <!--        android:insetBottom="6dp"-->
    <!--        app:cornerRadius="6dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.499"-->
    <!--        app:rippleColor="@color/pink" />-->

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_max="500dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintHeight_max="300dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintHeight_max="300dp">

                <RadioGroup
                    android:id="@+id/rgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/checkgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:id="@+id/delAndAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/deleteColor"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_color"
                android:textColor="@color/purple_500" />

            <Button
                android:id="@+id/addColor"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_color"
                android:textColor="@color/purple_500" />
        </LinearLayout>

        <EditText
            android:id="@+id/edNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/note"
            android:inputType="textShortMessage|textMultiLine"
            android:maxLength="200" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/saverus" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>